# neo

./: .travis.yml  Cargo.toml  README.md  build.rs  shell.nix
.github/workflows/: ci.yml
src/: lib.rs  main.rs  site.rs  site.serde_types.in.rs
tests/: integration.rs
tests/assets/: siteinfo.html
