[package]
name = "neo"
version = "0.2.0"
description = "API wrapper & CLI tool for Neocities"
readme = "README.md"
authors = ["Patrick Barrett <patrick@psbarrett.com>"]
repository = "https://github.com/azdle/neo"
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8"
error-chain = "0.11"
clap = "2.29"
log = "*"
pretty_env_logger = "0.2"
config = "0.8"
app_dirs = "1.1"
rpassword = "2.0"
rprompt = "1.0"

[dev-dependencies]
dotenv = "0.10"
