[package]
name = "neo"
version = "0.3.1"
description = "API wrapper & CLI tool for Neocities"
readme = "README.md"
authors = ["Patrick Barrett <patrick@psbarrett.com>"]
repository = "https://github.com/azdle/neo"
license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
error-chain = "0.12"
clap = "2.33"
log = "0.4"
pretty_env_logger = "0.3"
config = "0.9"
app_dirs = "1.2"
rpassword = "4.0"
rprompt = "1.0"

[dev-dependencies]
dotenv = "0.15"
