[package]
name = "neo"
version = "0.3.1"
description = "API wrapper & CLI tool for Neocities"
readme = "README.md"
authors = ["Patrick Barrett <patrick@psbarrett.com>"]
repository = "https://github.com/azdle/neo"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
thiserror = "1"
anyhow = "1"
clap = "4"
log = "0.4"
pretty_env_logger = "0.4"
config = { version = "0.13", default-features = false, features = [ "toml" ] }
directories = "4.0"
rpassword = "6.0"
rprompt = "1.0"

[dev-dependencies]
dotenv = "0.15"
